# nfl-analytics

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
ai/: langgraph_notebook.ipynb  langgraph_notebook_with_toolkit.ipynb  swc_toolkit.py
airflow/: docker-compose.override.yaml  docker-compose.yaml
airflow/config/: airflow.cfg
airflow/dags/: analytics_database.db  bulk_player_file_load.py  recurring_player_api_insert_update_dag.py  shared_functions.py
api/: main.py  routes.py  schemas.py
api/db/: crud.py  database.py  models.py
app/: main.py  routes.py  schemas.py  settings.py
app/db/: crud.py  database.py  models.py
database/: fantasy_data.db
ml/: main.py  player_acquisition_model.ipynb  schemas.py
ml/models/: acquisition_model_10.onnx  acquisition_model_50.onnx  acquisition_model_90.onnx
notebooks/: shark_league_notebook.ipynb
sdk/: README.md  pyproject.toml
sdk/src/swcpy/: swc_client.py  swc_config.py
sdk/tests/: test_swcpy.py
streamlit/: page1.py  page2.py  streamlit_football_app.py  swc_simple_client.py
tests/: test_crud.py  test_main.py
