[project]
name = "american-football-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "httpx>=0.27.0",
    "pandas>=3.0.1",
    "pydantic>=2.4.0",
    "pytest>=8.1.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.23.0",
]
