[project]
name = "american-football-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "backoff>=2.2.1",
    "httpx>=0.27.0",
    "pandas>=1.3.0",
    "pydantic>=2.4.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
api = [
    "fastapi[standard]>=0.115.0",
    "uvicorn>=0.23.0",
]
streamlit = [
    "matplotlib>=3.10.8",
    "nfl-data-py>=0.3.2",
    "streamlit>=1.25.0",
]
dev = [
    "pytest>=8.1.0",
]

[tool.setuptools.packages.find]
include = ["api*"]
